[gd_scene load_steps=19 format=2]

[ext_resource path="res://Shaders/Light1.png" type="Texture" id=1]
[ext_resource path="res://Misc/Overlap/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/Spells/FireballPhysics.gd" type="Script" id=3]
[ext_resource path="res://Effects/Spells/Sounds/soundbits_JustWhoosh3_Whoosh_Fire_008.mp3" type="AudioStream" id=4]
[ext_resource path="res://Effects/Spells/Sounds/zapsplat_sound_design_whoosh_fire_flames_fast_001_89891.mp3" type="AudioStream" id=5]
[ext_resource path="res://Effects/Spells/Sounds/zapsplat_sound_design_whoosh_fire_flames_fast_002_89892.mp3" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=18]
rough = true
absorbent = true

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.88623, 0.513051, 0.0726986, 1, 1, 0.890625, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
radial_accel = 1.2
radial_accel_random = 1.0
tangential_accel_random = 1.0
scale = 0.5
color = Color( 1, 0.623529, 0.129412, 1 )
color_ramp = SubResource( 7 )
color_initial_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
gravity = Vector3( 0, 3, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
radial_accel_random = 1.0
tangential_accel_random = 1.0
scale = 0.5
color = Color( 1, 0.784314, 0.129412, 1 )
color_ramp = SubResource( 7 )
color_initial_ramp = SubResource( 7 )

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="CircleShape2D" id=13]
radius = 2.55362

[sub_resource type="CircleShape2D" id=14]
radius = 4.56635

[sub_resource type="Animation" id=15]
resource_name = "Destroy"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D4:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.819608, 0.45098, 0.180392, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBox:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBox:collision_mask")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_destroy"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Particles2D4:process_material:radial_accel")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.11, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 100.0, 100.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Particles2D4:lifetime")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Particles2D3:lifetime")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Particles2D2:lifetime")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Particles2D2:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Particles2D3:emitting")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Particles2D4:emitting")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.12, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Particles2D4:process_material:gravity")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 3, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Particles2D4:amount")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4500 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath(".:speed")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/17/type = "audio"
tracks/17/path = NodePath("AudioStreamPlayer2D")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.13,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
resource_name = "Idle"
length = 9999.0
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Light2D4:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.819608, 0.45098, 0.180392, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HitBox:collision_layer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HitBox:collision_mask")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 512 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Particles2D4:amount")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2000 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Particles2D4:process_material:radial_accel")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Particles2D4:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Particles2D4:lifetime")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Particles2D3:process_material:gravity")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -4, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Particles2D2:process_material:gravity")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Particles2D4:preprocess")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath(".:speed")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 200 ]
}

[sub_resource type="CircleShape2D" id=17]
radius = 4.0904

[node name="FireballPhysics" type="RigidBody2D" groups=["Fireball"]]
collision_layer = 67108864
collision_mask = 8
physics_material_override = SubResource( 18 )
script = ExtResource( 3 )
speed = 0

[node name="Particles2D2" type="Particles2D" parent="." groups=["Fireball"]]
position = Vector2( -0.0368805, 0.00410461 )
emitting = false
amount = 20
lifetime = 0.2
randomness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 9 )

[node name="Particles2D3" type="Particles2D" parent="." groups=["Fireball"]]
position = Vector2( -0.0368805, 0.00410461 )
emitting = false
amount = 20
lifetime = 0.2
randomness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 9 )

[node name="Particles2D4" type="Particles2D" parent="." groups=["Fireball"]]
position = Vector2( -0.0523453, 0.00410461 )
emitting = false
amount = 4500
randomness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 12 )

[node name="Light2D" type="Light2D" parent="." groups=["Fireball"]]
modulate = Color( 1, 0.529412, 0.188235, 0.501961 )
material = SubResource( 10 )
position = Vector2( -0.0523605, 0.00411606 )
scale = Vector2( 0.72865, 0.72865 )
texture = ExtResource( 1 )
texture_scale = 0.01
color = Color( 0.996078, 0.529412, 0.176471, 1 )
energy = 0.0
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 1
shadow_filter_smooth = 25.0

[node name="Light2D4" type="Sprite" parent="." groups=["Fireball"]]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.431373 )
material = SubResource( 11 )
position = Vector2( -0.0523529, 0.00411987 )
scale = Vector2( 0.246734, 0.246734 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Fireball"]]
position = Vector2( -0.0523453, 0 )
shape = SubResource( 13 )
disabled = true

[node name="HitBox" parent="." groups=["Fireball"] instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 0
damage = 15

[node name="CollisionShape2D" parent="HitBox" index="0" groups=["Fireball"]]
position = Vector2( -0.0523453, 0 )
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["Fireball"]]
reset_on_save = false
anims/Destroy = SubResource( 15 )
anims/Idle = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="." groups=["Fireball"]]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["Fireball"]]
position = Vector2( -0.0523453, 0 )
shape = SubResource( 17 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["Fireball"]]
stream = ExtResource( 4 )

[node name="Whoosh1" type="AudioStreamPlayer2D" parent="." groups=["Fireball"]]
stream = ExtResource( 5 )

[node name="Whoosh2" type="AudioStreamPlayer2D" parent="." groups=["Fireball"]]
stream = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_FireballPhysics_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="HitBox"]
